microservices/app/crawler/deployment-crawler.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crawler
  namespace: app
  labels:
    app: search_engine
    component: crawler
spec:
  replicas: 3
  selector:
    matchLabels:
      app: search_engine
      component: crawler
  template:
    metadata:
      name: crawler
      labels:
        app: search_engine
        component: crawler
    spec:
      containers:
      - name: crawler
        image: vlashm/crawler:latest
