microservices/app/crawler/service-crawler.yml
---
apiVersion: v1
kind: Service
metadata:
  name: crawler
  namespace: app
spec:
  type: ClusterIP
  ports:
    - port: 8000
      protocol: TCP
      targetPort: 8000
  selector:
    app: search_engine
    component: crawler
