microservices/app/crawler/service-ui.yml
---
apiVersion: v1
kind: Service
metadata:
  name: ui
  namespace: app
  labels:
    app: search_engine
    component: ui    
spec:
  type: NodePort
  ports:
   - protocol: TCP
     port: 8000
     targetPort: 8000
  selector:
    app: search_engine
    component: ui
