microservices/app/crawler/ingress-ui.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-ui
  namespace: app
spec:
  ingressClassName: nginx
  rules:
    - host: app.vlashm.site
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: ui
              port:
                number: 8000
